--- a/index.html
+++ b/index.html
@@ -373,8 +373,9 @@
                 <div class="video">
                     <video src="img/video.mp4" autoplay muted loop></video>
                     <div class="videobox">
-                        <p>국내여행도 나비투어와 함께 <br>
-                            요즘 여행의 답이 되다, 나비투어</p>
+                        <p><b>요즘 여행의 답이 되다, 나비투어</b> <br>
+                            국내여행도 나비투어와 함께
+                            </p>
                         <button>더보기</button>
                     </div>
                 </div>
@@ -430,9 +431,29 @@
             <hr>
             <footer>
                 <div class="container">
-                    <div class="textbox1"></div>
-                    <div class="textbox2"></div>
-                    <div class="textbox3"></div>
+                    <div class="textbox1">
+                        <table>
+                            <tr>
+                            <td>나비투어 여행 예약센터</td>
+                            <td>1577-5252</td>
+                            <td>1577-6722 (부산/대구출발 여행)</td>
+                            <td>1577-5353 (항공권 전용)</td>
+                        </tr>
+                        </table>
+                    </div>
+                    <div class="textbox2">
+                        <table>
+                            <tr>
+                            <th>해외/국내 여행 및 항공상담</th>
+                            <td>평일 09:00 ~ 18:00(토/일요일 및 공휴일 휴무)</td>
+                            <td>*항공권은 전화상담 예약시 항공료 외 별도의</td>
+                            <td>취급수수료가 발생합니다</td>
+                        </tr>
+                        </table>
+                    </div>
+                    <div class="textbox3">
+                        <p>자주 묻는 질문</p>
+                    </div>
                     <p class="copyright">
                         나비투어는 개별 항공권, 단품 및 일부 여행상품에 대하여 판매중개자로서 통신판매의 당사자가 아닙니다. 따라서 해당 상품의 상품·거래정보 및 거래 등에 대하여 책임을 지지
                         않습니다. <br>
