--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Navi Tour</title>
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/commom.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap" rel="stylesheet">
@@ -364,6 +365,9 @@
                         <a href="#">
                             <p>오사카</p>
                         </a>
+                        <a href="#">
+                            <p>더보기<b>→</b></p>
+                        </a>
                     </div>
 
                 </div>
@@ -409,6 +413,57 @@
             </div>
             <div id="article6">
                 <div class="container">
+                    <h2>추천! 테마여행</h2>
+                    <div class="leftbox">
+                        <ul>
+                            <li><a href="#">식도락 여행<b>→</b></a></li>
+                            <li><a href="#">아이동반 여행<b>→</b></a></li>
+                        </ul>
+                    </div>
+                    <div class="rightbox">
+                        <a href="#">
+                            <div class="img6"><img src="img/jeju2.jpg" alt="jeju"></div>
+                            <div class="imgbox6"><img src="img/jeju1.png" alt="jeju"></div>
+                            <div class="imgbox6"><img src="img/jeju.jpg" alt="jeju"></div>
+                            <div class="text6">
+                                <h3>식도락 제주여행 3박4일</h3>
+                                <p>#제주식도락여행 #럭셔리요트투어</p>
+                                <span><b>339,900</b>원~</span>
+                            </div>
+                        </a>
+                        <a href="#">
+                            <div class="img6"><img src="img/Jeolla2.jpg" alt="jeollado"></div>
+                            <div class="imgbox6"><img src="img/Jeolla.jpg" alt="jeollado"></div>
+                            <div class="imgbox6"><img src="img/Jeolla1.jpg" alt="jeollado"></div>
+                            <div class="text6">
+                                <h3>전라도 별미 남도일주 2박 3일</h3>
+                                <p>#전라도맛기행 #식도락여행</p>
+                                <span><b>315,900</b>원~</span>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="rightbox">
+                        <a href="#">
+                            <div class="img6"><img src="img/jeju6.jpg" alt="jeju"></div>
+                            <div class="imgbox6"><img src="img/jeju5.jpg" alt="jeju"></div>
+                            <div class="imgbox6"><img src="img/jeju4.jpg" alt="jeju"></div>
+                            <div class="text6">
+                                <h3>느엉나영 제주여행 2박3일</h3>
+                                <p>#981파크제주 #돌고래탐사 #메종글래드제주</p>
+                                <span><b>711,900</b>원~</span>
+                            </div>
+                        </a>
+                        <a href="#">
+                            <div class="img6"><img src="img/high1.jpg" alt="ski"></div>
+                            <div class="imgbox6"><img src="img/high2.jpg" alt="ski"></div>
+                            <div class="imgbox6"><img src="img/high3.jpg" alt="room"></div>
+                            <div class="text6"> 
+                                <h3>정선 하이원리조트 마운틴콘도 1박</h3>
+                                <p>#하이원리조트 #스키패키지</p>
+                                <span><b>399,000</b>원~</span>
+                            </div>
+                        </a>
+                    </div>
 
                 </div>
             </div>
@@ -431,28 +486,20 @@
             <hr>
             <footer>
                 <div class="container">
-                    <div class="textbox1">
-                        <table>
-                            <tr>
-                            <td>나비투어 여행 예약센터</td>
-                            <td>1577-5252</td>
-                            <td>1577-6722 (부산/대구출발 여행)</td>
-                            <td>1577-5353 (항공권 전용)</td>
-                        </tr>
-                        </table>
+                    <div class="textbox7">
+                        <p>나비투어 여행 예약센터<br>
+                        <b><img src="img/phone.png" alt="icon">1577-5252</b> <br>
+                        <b>1577-6722</b> (부산/대구출발 여행) <br>
+                        <b>1577-5353</b> (항공권 전용)</p>
                     </div>
-                    <div class="textbox2">
-                        <table>
-                            <tr>
-                            <th>해외/국내 여행 및 항공상담</th>
-                            <td>평일 09:00 ~ 18:00(토/일요일 및 공휴일 휴무)</td>
-                            <td>*항공권은 전화상담 예약시 항공료 외 별도의</td>
-                            <td>취급수수료가 발생합니다</td>
-                        </tr>
-                        </table>
+                    <div class="textbox7">
+                        <p>해외/국내 여행 및 항공상담<br>
+                        평일 09:00 ~ 18:00(토/일요일 및 공휴일 휴무) <br>
+                        *항공권은 전화상담 예약시 항공료 외 별도의<br>
+                        취급수수료가 발생합니다</p>
                     </div>
-                    <div class="textbox3">
-                        <p>자주 묻는 질문</p>
+                    <div class="textbox7">
+                        <p><img src="img/icon7.png" alt="icon">자주 묻는 질문</p>
                     </div>
                     <p class="copyright">
                         나비투어는 개별 항공권, 단품 및 일부 여행상품에 대하여 판매중개자로서 통신판매의 당사자가 아닙니다. 따라서 해당 상품의 상품·거래정보 및 거래 등에 대하여 책임을 지지
