--- a/index.html
+++ b/index.html
@@ -11,31 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap" rel="stylesheet">
     <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.6.0.min.js"></script>
-    <script>
-        function slide() {
-            var w = window.innerWidth - 17;
-            console.log(w)
-            $('.move').stop().animate({ marginLeft: -w }, 2000, function () {
-                $('.move li:first').appendTo('.move');
-                $('.move').css({ marginLeft: 0 });
-            });
-        }
-        setInterval(slide, 4500);
-
-        $(function () {
-            $('.left').click(function () {
-                $('.tour li:last').prependTo('.tour');
-                $('.tour').css('margin-left', '-33.33%');
-                $('.tour').stop().animate({ marginLeft: 0 }, 800);
-            });
-            $('.right').click(function () {
-                $('.tour').stop().animate({ marginLeft: '-33.33%' }, 800, function () {
-                    $('.tour li:first').appendTo('.tour');
-                    $('.tour').css({ marginLeft: 0 });
-                });
-            });
-        });
-    </script>
+    <script src="js/main.js"></script>
 
 </head>
 
