--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Navi Tour</title>
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/main copy.css">
     <link rel="stylesheet" href="css/commom.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -41,7 +41,9 @@
                         <img src="img/icon3.png" alt="icon">
                         <p>찜</p>
                     </a>
+                    
                 </div>
+                <a href="#"><img src="img/i.png" alt="icon"></a>
             </div>
 
         </header>
@@ -49,7 +51,7 @@
             <div class="container">
                 <img src="img/i.png" alt="icon">
                 <ul>
-                    <li><a href="#">전체메뉴</a></li>
+                    <li><a href="#" class="menu1">전체메뉴</a></li>
                     <li><a href="#">해외여행</a></li>
                     <li><a href="#">국내여행</a></li>
                     <li><a href="#">항공</a></li>
@@ -284,13 +286,13 @@
 
         <div id="article2">
             <div class="container">
-                <div class="click1">
+                <div class="click1 show1">
                     나의 여행스타일은?
                 </div>
-                <div class="click2">
+                <div class="click2 show2">
                     설 연휴 출발가능!
                 </div>
-                <div class="clickbox1">
+                <div class="clickbox1" >
                     <img src="img/vanner1.png" alt="vanner">
                     <div class="imgbox2">
                         <a href="#">
@@ -484,8 +486,8 @@
                     <h2>추천! 테마여행</h2>
                     <div class="leftbox">
                         <ul>
-                            <li><a href="#">식도락 여행<b>→</b></a></li>
-                            <li><a href="#">아이동반 여행<b>→</b></a></li>
+                            <li>식도락 여행<b>→</b></li>
+                            <li>아이동반 여행<b>→</b></li>
                         </ul>
                     </div>
                     <div class="rightbox">
