--- a/index.html
+++ b/index.html
@@ -574,12 +574,11 @@
                         <p><img src="img/icon7.png" alt="icon">자주 묻는 질문</p>
                     </div>
                     <p class="copyright">
-                        나비투어는 개별 항공권, 단품 및 일부 여행상품에 대하여 판매중개자로서 통신판매의 당사자가 아닙니다. 따라서 해당 상품의 상품·거래정보 및 거래 등에 대하여 책임을 지지
+                        <span>나비투어는 개별 항공권, 단품 및 일부 여행상품에 대하여 판매중개자로서 통신판매의 당사자가 아닙니다. 따라서 해당 상품의 상품·거래정보 및 거래 등에 대하여 책임을 지지
                         않습니다. <br>
                         항공권 또는 항공권이 포함된 상품의 경우, 표시되는 상품요금은 세금 및 예상 유류할증료가 포함된 가격이며, 유류할증료는 유가 및 환율 등에 따라 변동될 수 있습니다.
-                        <br>
-                        ©
-                        Navi tour. All Rights Reserved.
+                        <br></span>
+                        © Navi tour. All Rights Reserved.
                     </p>
                 </div>
             </footer>
