--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap" rel="stylesheet">
     <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.6.0.min.js"></script>
-    <script src="js/main.js"></script>
+    <!-- <script src="js/main.js"></script> -->
 
 </head>
 
@@ -43,7 +43,7 @@
                     </a>
                     
                 </div>
-                <a href="#"><img src="img/i.png" alt="icon"></a>
+                <a href="#"><img src="img/i.png" alt="icon" class="hide"></a>
             </div>
 
         </header>
@@ -583,6 +583,8 @@
                 </div>
             </footer>
         </div>
+
+        <script src="js/main.js"></script>
 </body>
 
 </html>
