--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/main_media.css">
     <link rel="stylesheet" href="css/commom.css">
-    <link rel="stylesheet" href="css/commom_media.css.css">
+    <link rel="stylesheet" href="css/commom_media.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap" rel="stylesheet">
@@ -303,7 +303,7 @@
 
                             <div class="txt">
                                 <p>
-                                    [부산출발]세부 5일<br>
+                                    <b>[부산출발]세부 5일</b><br>
                                     현지사용 캐쉬바우처 50만원
                                 </p>
                                 <p>1,049,000 <small>원~</small>
@@ -314,7 +314,7 @@
                             <img src="img/desert3.png" alt="desert">
                             <div class="txt">
                                 <p>
-                                    사우디+요르단 8일<br>
+                                    <b>사우디+요르단 8일</b><br>
                                     #유네스코 #사막지프투어
                                 </p>
                                 <p>4,490,000 <small>원~</small>
@@ -325,7 +325,7 @@
                             <img src="img/wien.jpg" alt="wien">
                             <div class="txt">
                                 <p>
-                                    오스트리아 일주 9일<br>
+                                    <b>오스트리아 일주 9일</b><br>
                                     #비엔나직항 #아쿠아돔 온천
                                 </p>
                                 <p>4,009,000 <small>원~</small>
@@ -336,7 +336,7 @@
                             <img src="img/tur.png" alt="turkiye">
                             <div class="txt">
                                 <p>
-                                    튀르키예 9일<br>
+                                    <b>튀르키예 9일</b><br>
                                     #아시아나항공 #4대옵션+5대특식
                                 </p>
                                 <p>1,199,900 <small>원~</small>
@@ -356,7 +356,7 @@
 
                             <div class="txt">
                                 <p>
-                                    동유럽&발칸 5국 11일<br>
+                                    <b>동유럽&발칸 5국 11일</b><br>
                                     #슈네첼,그릴송어 등 8대음식
                                 </p>
                                 <p>3,035,000 <small>원~</small>
@@ -367,7 +367,7 @@
                             <img src="img/hawaii2.jpg" alt="hawaii">
                             <div class="txt">
                                 <p>
-                                    하와이 일주 6,7,8일<br>
+                                    <b>하와이 일주 6,7,8일</b><br>
                                     #호텔변경, 귀국일 연장 가능
                                 </p>
                                 <p>1,999,000 <small>원~</small>
@@ -378,7 +378,7 @@
                             <img src="img/sydney.png" alt="sydney">
                             <div class="txt">
                                 <p>
-                                    시드니+멜버른 8일<br>
+                                    <b>시드니+멜버른 8일</b><br>
                                     #호주 완전 정복
                                 </p>
                                 <p>2,549,000 <small>원~</small>
@@ -389,7 +389,7 @@
                             <img src="img/japan3.jpg" alt="japan">
                             <div class="txt">
                                 <p>
-                                    오사카 4일<br>
+                                    <b>오사카 4일</b><br>
                                     #유니버셜스튜디오 #교토관광
                                 </p>
                                 <p>699,900 <small>원~</small>
@@ -449,7 +449,7 @@
                 <div class="video">
                     <video src="img/video.mp4" autoplay muted loop></video>
                     <div class="videobox">
-                        <p><b>요즘 여행의 답이 되다, 나비투어</b> <br>
+                        <p><b>요즘 여행의 답이 되다,<br> 나비투어</b> <br>
                             국내여행도 나비투어와 함께
                         </p>
                         <button>더보기</button>
@@ -488,7 +488,7 @@
                     <h2>추천! 테마여행</h2>
                     <div class="leftbox">
                         <ul>
-                            <li>식도락 여행<b>→</b></li>
+                            <li class="yellow">식도락 여행<b>→</b></li>
                             <li>아이동반 여행<b>→</b></li>
                         </ul>
                     </div>
