--- a/detail.html
+++ b/detail.html
@@ -369,35 +369,43 @@
                             <dl>
                                 <dt><p>성인 (만 12세 이상)</p>
                                 <b>749,000</b><span>원</span></dt>
-                                <dd></dd>
+                                <dd>
+                                    <button>-</button>
+                                    <input type="text" size="1" value="1" id="count">
+                                    <button>+</button>
+                                </dd>
                             </dl>
                             <dl>
                                 <dt><p>
                                     소아 (만 12세 미만)</p>
                                     <b>749,000</b><span>원</span>
                                     </dt>
-                                <dd></dd>
+                                <dd>
+                                    <button>-</button>
+                                    <input type="text" size="1" value="1" id="count">
+                                    <button>+</button>
+                                </dd>
                             </dl>
                             <dl>
                                 <dt><p>유아 (만 2세 미만)</p>
                                     <b>100,000</b><span>원</span></dt>
-                                <dd></dd>
+                                <dd>
+                                    <button>-</button>
+                                    <input type="text" size="1" value="1" id="count">
+                                    <button>+</button>
+                                </dd>
                             </dl>
                         </div>
-                        <div class="count">
-
-                        </div>
-                        <p>유류할증료 및 제세공과금 포함</p>
                         
-
+                        <p>유류할증료 및 제세공과금 포함</p>
                     </div>
                     <dl>
                         <dt>인원금액</dt>
-                        <dd></dd>
+                        <dd><input type="text"></dd>
                     </dl>
                     <dl>
                         <dt>총 상품 금액</dt>
-                        <dd></dd>
+                        <dd><input type="text"></dd>
                     </dl>
                      <button class="btn1">예약하기</button>
                      <button class="btn2">상담톡 연결</button>
