--- a/detail.html
+++ b/detail.html
@@ -355,6 +355,41 @@
 
                     </div>
                     <div class="detail">
+                        <div class="de_top">
+                            <h3>취소규정</h3>
+                            <dl>
+                                <dt>취소수수료 적용 기준: 특별약관</dt>
+                                <dd>- 여행개시 30일 전까지 통보 시 : 계약금 환급 (위약금 없이 계약 취소)</dd>
+                                <dd>- 여행개시 20일 전까지 통보 시 : 여행요금의 10% 배상</dd>
+                                <dd>- 여행개시 10일 전까지 통보 시 : 여행요금의 15% 배상</dd>
+                                <dd>- 여행개시 08일 전까지 통보 시 : 여행요금의 20% 배상</dd>
+                                <dd>- 여행개시 01일 전까지 통보 시 : 여행요금의 30% 배상</dd>
+                                <dd>- 여행 당일 통보시 : 여행요금의 50% 배상</dd>
+                            </dl>
+
+                            <p>본 상품은 항공권 발권 이후 취소 시 상기 취소료 외에 항공권 취소 수수료 +12 만원 이 추가로 발생됩니다</p>
+                            <p>자세히 보기를 통해 전체 취소수수료 적용 기준을 반드시 확인 부탁드립니다.</p>
+                        </div>
+                        <button>자세히 보기 <span>▽</span></button>
+                        <div class="dt_hide">
+                            <dl>
+                                <dd>■ 여행 취소시 국외여행표준약관 제16조 제1항에 따라 소비자분쟁해결규정(공정거래위원회 고시)를 적용하여 위의 비율로 취소수수료가 부과됩니다.</dd>
+                                <dd>■ 당사의 귀책사유로 여행이 취소되는 경우에도 위 여행 취소수수료 비율을 적용하여 고객에게 배상합니다.</dd>
+                                <dd>■ 본 여행상품은 청약에 대한 승인의 의사표시로써 예약금을 지불한 시점부터 계약이 성립되며, 계약해제 요청 시에는 귀책사유에 따라 취소수수료가 부과됩니다.</dd>
+                                <dd>■ 취소는 업무시간 내 접수 시 확인 및 적용이 가능합니다. 업무시간 외 접수한 경우에는 익일
+                                    (영업일이 아닌 경우 다음 영업일)에 접수한 것으로 간주됩니다. 업무시간은 월요일~금요일 09:00~18:00 이며, 
+                                    주말 및 공휴일 그리고 주중 09:00~18:00 외 시간은 업무시간에 해당되지 않습니다. (예. 토/일/월요일 출발상품은 금요일 업무 종료 전까지 취소 하셔야 합니다.)</dd>
+                                <dd>■ 고객은 계약 취소와 관련하여 취소수수료(여행사 인건비 포함) 부과 내역에 관한 구체적 증빙과 설명을 여행사에 요구할 수 있으며, 
+                                    여행사는 관련 설명과 증빙을 제시하고 취소수수료 규정과 차액이 있는 경우 환급합니다. 
+                                    (단, 항공사 및 숙박업체 등의 증빙을 여행사가 확보하는 시점까지 고객에게 증빙 제공을 유예할 수 있습니다.)</dd>
+                                <dd>■ 최소 출발인원이 미충족되어 여행출발이 불가한 경우에는 
+                                    국외여행표준약관 제17조에 따라 여행사는 여행출발 7일 전까지 여행계약을 해제하고 고객님께 통보하여 드립니다.</dd>
+                                <dd>- 여행 개시 7일 전까지 계약 해제 통지 : 계약금 환급</dd>
+                                <dd>- 여행 개시 1일 전까지 계약 해제 통지 : 여행요금의 30% 배상</dd>
+                                <dd>- 여행 출발 당일 계약 해제 통지 : 여행요금의 50% 배상</dd>
+                            </dl>
+
+                        </div>
 
                     </div>
                     <div class="review">
@@ -370,9 +405,9 @@
                                 <dt><p>성인 (만 12세 이상)</p>
                                 <b>749,000</b><span>원</span></dt>
                                 <dd>
-                                    <button>-</button>
-                                    <input type="text" size="1" value="1" id="count">
-                                    <button>+</button>
+                                    <input type="button" value="-" id="minus" onclick="minus()">
+                                    <input type="text" size="2" value="1" id="count">
+                                    <input type="button" value="+" id="plus" onclick="plus()">
                                 </dd>
                             </dl>
                             <dl>
@@ -381,31 +416,29 @@
                                     <b>749,000</b><span>원</span>
                                     </dt>
                                 <dd>
-                                    <button>-</button>
-                                    <input type="text" size="1" value="1" id="count">
-                                    <button>+</button>
+                                    <input type="button" value="-" id="minus" onclick="minus()">
+                                    <input type="text" size="2" value="1" id="count">
+                                    <input type="button" value="+" id="plus" onclick="plus()">
                                 </dd>
                             </dl>
                             <dl>
                                 <dt><p>유아 (만 2세 미만)</p>
                                     <b>100,000</b><span>원</span></dt>
                                 <dd>
-                                    <button>-</button>
-                                    <input type="text" size="1" value="1" id="count">
-                                    <button>+</button>
+                                    <input type="button" value="-" id="minus" onclick="minus()">
+                                    <input type="text" size="2" value="1" id="count">
+                                    <input type="button" value="+" id="plus" onclick="plus()">
                                 </dd>
                             </dl>
                         </div>
                         
                         <p>유류할증료 및 제세공과금 포함</p>
                     </div>
-                    <dl>
-                        <dt>인원금액</dt>
-                        <dd><input type="text"></dd>
-                    </dl>
+                    
                     <dl>
                         <dt>총 상품 금액</dt>
-                        <dd><input type="text"></dd>
+                        <dd><input type="text" value="749000" id="total_count" hidden=hidden />
+                            <input type="text" value="749000" id="total_count_view"  /><span>원</span></dd>
                     </dl>
                      <button class="btn1">예약하기</button>
                      <button class="btn2">상담톡 연결</button>
