--- a/detail.html
+++ b/detail.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Navi Tour_Detail</title>
+    <link rel="stylesheet" href="css/detail.css">
     <link rel="stylesheet" href="css/detail_media.css">
     <link rel="stylesheet" href="css/commom.css">
     <link rel="stylesheet" href="css/commom_media.css">
@@ -30,15 +31,15 @@
                 </div>
 
                 <div class="icon">
-                    <a href="#">
+                    <a href="index.html">
                         <img src="img/icon1.png" alt="icon">
                         <p>마이메뉴</p>
                     </a>
-                    <a href="#">
+                    <a href="index.html">
                         <img src="img/icon2.png" alt="icon">
                         <p>예약내역</p>
                     </a>
-                    <a href="#">
+                    <a href="index.html">
                         <img src="img/icon3.png" alt="icon">
                         <p>찜</p>
                     </a>
