--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                         <div class="textbox">
                             <h2>이집트</h2>
                             <p>고대 문명이 살아 숨 쉬는 곳</p>
-                            <a href="#">예약하기</a>
+                            <a href="detail.html">예약하기</a>
                         </div>
                     </div>
                 </li>
@@ -174,7 +174,7 @@
                         <div class="textbox">
                             <h2>프랑스</h2>
                             <p>파리의 낭만이 있는 곳</p>
-                            <a href="#">예약하기</a>
+                            <a href="detail.html">예약하기</a>
                         </div>
                         </div>
                 </li>
@@ -183,7 +183,7 @@
                         <div class="textbox">
                             <h2>스위스</h2>
                             <p>자연과 사람의 조화가 아름다운 곳</p>
-                            <a href="#">예약하기</a>
+                            <a href="detail.html">예약하기</a>
                         </div>
                         </div>
                 </li>
@@ -219,7 +219,7 @@
 
                 <ul class="tour">
                     <li>
-                        <a href="#" class="tour1">
+                        <a href="detail.html" class="tour1">
                             <div class="imgbox1"><img src="img/mongol.jpg" alt="mongol"></div>
                             <div class="text1">
                                 <h3>[몽골] 울란바토르 3~4일</h3>
@@ -229,7 +229,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#" class="tour1">
+                        <a href="detail.html" class="tour1">
                             <div class="imgbox1"><img src="img/taiwan.png" alt="taiwan">
                             </div>
                             <div class="text1">
@@ -240,7 +240,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#" class="tour1">
+                        <a href="detail.html" class="tour1">
                             <div class="imgbox1"><img src="img/bali.jpg" alt="bali"></div>
                             <div class="text1">
                                 <h3>[인도네시아] 발리 남부 투어 5일</h3>
@@ -250,7 +250,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#" class="tour1">
+                        <a href="detail.html" class="tour1">
                             <div class="imgbox1"><img src="img/vet3.jpg" alt="vietnam"></div>
                             <div class="text1">
                                 <h3>[베트남] 하노이 4~5일</h3>
@@ -260,7 +260,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#" class="tour1">
+                        <a href="detail.html" class="tour1">
                             <div class="imgbox1"><img src="img/bangkok.jpg" alt="bangkok"></div>
                             <div class="text1">
                                 <h3>[태국] 방콕/파타야 5~6일</h3>
@@ -270,7 +270,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#" class="tour1">
+                        <a href="detail.html" class="tour1">
                             <div class="imgbox1"><img src="img/spain.jpg" alt="spain"></div>
                             <div class="text1">
                                 <h3>[스페인] 스페인 일주 9~11일</h3>
@@ -298,7 +298,7 @@
                 <div class="clickbox1">
                     <img src="img/vanner1.png" alt="vanner">
                     <div class="imgbox2">
-                        <a href="#">
+                        <a href="detail.html">
 
                             <img src="img/cebu.png" alt="cebu">
 
@@ -311,7 +311,7 @@
                                 </p>
                             </div>
                         </a>
-                        <a href="#">
+                        <a href="detail.html">
                             <img src="img/desert3.png" alt="desert">
                             <div class="txt">
                                 <p>
@@ -322,7 +322,7 @@
                                 </p>
                             </div>
                         </a>
-                        <a href="#">
+                        <a href="detail.html">
                             <img src="img/wien.jpg" alt="wien">
                             <div class="txt">
                                 <p>
@@ -333,7 +333,7 @@
                                 </p>
                             </div>
                         </a>
-                        <a href="#">
+                        <a href="detail.html">
                             <img src="img/tur.png" alt="turkiye">
                             <div class="txt">
                                 <p>
@@ -350,7 +350,7 @@
                 <div class="clickbox2">
                     <img src="img/vanner2.png" alt="vanner">
                     <div class="imgbox2">
-                        <a href="#">
+                        <a href="detail.html">
 
                             <img src="img/eu.jpg" alt="europe">
 
@@ -364,7 +364,7 @@
                                 </p>
                             </div>
                         </a>
-                        <a href="#">
+                        <a href="detail.html">
                             <img src="img/hawaii2.jpg" alt="hawaii">
                             <div class="txt">
                                 <p>
@@ -375,7 +375,7 @@
                                 </p>
                             </div>
                         </a>
-                        <a href="#">
+                        <a href="detail.html">
                             <img src="img/sydney.png" alt="sydney">
                             <div class="txt">
                                 <p>
@@ -386,7 +386,7 @@
                                 </p>
                             </div>
                         </a>
-                        <a href="#">
+                        <a href="detail.html">
                             <img src="img/japan3.jpg" alt="japan">
                             <div class="txt">
                                 <p>
@@ -461,7 +461,7 @@
         <div id="article5">
             <div class="container">
                 <h2><a href="#">홈쇼핑 방영상품</a></h2>
-                <a href="#" class="shop">
+                <a href="detail.html" class="shop">
                     <img src="img/spain3.jpg" alt="spain">
                     <div class="text2">
                         <p>2024.01.17 (수) 18:35 방영</p>
@@ -472,7 +472,7 @@
                     </div>
 
                 </a>
-                <a href="#" class="shop">
+                <a href="detail.html" class="shop">
                     <img src="img/china1.jpg" alt="china">
                     <div class="text2">
                         <p>2024.01.19 (금) 22:40 방영</p>
