--- a/detail.html
+++ b/detail.html
@@ -25,7 +25,7 @@
 
                 <div class="logo">
                     <img src="img/logo.png" alt="logo">
-                    <h2>나비투어</h2>
+                    <h2><a href="index.html">나비투어</a></h2>
                     <span><input type="text" placeholder="검색어를 입력해주세요." maxlength="13"><button><img src="img/qq.png"
                                 alt="돋보기"></button></span>
                 </div>
@@ -54,7 +54,7 @@
                 <img src="img/i.png" alt="icon">
                 <ul>
                     <li><a href="#" class="menu1">전체메뉴</a></li>
-                    <li><a href="#">해외여행</a></li>
+                    <li><a href="index.html">해외여행</a></li>
                     <li><a href="#">국내여행</a></li>
                     <li><a href="#">항공</a></li>
                     <li><a href="#">호텔</a></li>
@@ -66,7 +66,7 @@
                             <dt><a href="#">해외여행</a></dt>
                             <dd>
                                 <ul>
-                                    <li><a href="#">해외여행 홈</a></li>
+                                    <li><a href="index.html">해외여행 홈</a></li>
                                     <li><a href="#"></a></li>
                                     <li><a href="#"></a></li>
                                     <li><a href="#"></a></li>
