--- a/detail.html
+++ b/detail.html
@@ -475,6 +475,7 @@
 
                         <div class="dt_hide">
                             <dl>
+                                <dt></dt>
                                 <dd>■ 여행 취소시 국외여행표준약관 제16조 제1항에 따라 소비자분쟁해결규정(공정거래위원회 고시)를 적용하여 위의 비율로 취소수수료가 부과됩니다.</dd>
                                 <dd>■ 당사의 귀책사유로 여행이 취소되는 경우에도 위 여행 취소수수료 비율을 적용하여 고객에게 배상합니다.</dd>
                                 <dd>■ 본 여행상품은 청약에 대한 승인의 의사표시로써 예약금을 지불한 시점부터 계약이 성립되며, 계약해제 요청 시에는 귀책사유에 따라 취소수수료가
@@ -507,28 +508,28 @@
                             </div>
                             <div class="rate">
                                 <dl>
-                                    <dd>상품구성</dd>
+                                    <dt>상품구성</dt>
                                     <dd> <progress value="9.1" max="10"></progress>
                                     </dd>
                                     <dd>9.1</dd>
                                 </dl>
                                 <dl>
-                                    <dd>상품정보</dd>
+                                    <dt>상품정보</dt>
                                     <dd> <progress value="9.1" max="10"></progress> </dd>
                                     <dd>9.1</dd>
                                 </dl>
                                 <dl>
-                                    <dd>일정구성</dd>
+                                    <dt>일정구성</dt>
                                     <dd><progress value="9.2" max="10"></progress></dd>
                                     <dd>9.2</dd>
                                 </dl>
                                 <dl>
-                                    <dd>가이드 친절도</dd>
+                                    <dt>가이드 친절도</dt>
                                     <dd><progress value="9.6" max="10"></progress></dd>
                                     <dd>9.6</dd>
                                 </dl>
                                 <dl>
-                                    <dd>가이드 시간/일정준수</dd>
+                                    <dt>가이드 시간/일정준수</dt>
                                     <dd><progress value="9.7" max="10"></progress></dd>
                                     <dd>9.7</dd>
                                 </dl>
