--- a/index.html
+++ b/index.html
@@ -16,6 +16,16 @@
     <link rel="icon" href="img/logo.ico" />
     <!-- <script src="js/main.js"></script> -->
 
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-LE8EXVNMR8"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-LE8EXVNMR8');
+</script>
+
 </head>
 
 
